<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_detail"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_marginTop="42dp"
                tools:src="@tools:sample/avatars"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/movie_title"
                        android:textColor="@color/md_theme_primary"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/info_film"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_vertical">

                        <LinearLayout
                            android:id="@+id/rating_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/movie_description"
                                android:src="@drawable/baseline_star_24" />

                            <TextView
                                android:id="@+id/rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:text="@string/movie_rating" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/duration_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_access_time_24"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/duration"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:text="@string/durasi" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/genre" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/judul_desciption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/info_film"
                        android:layout_marginTop="8dp"
                        android:text="Deskripsi"
                        android:textColor="@color/md_theme_primary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/judul_desciption"
                        android:layout_marginTop="8dp"
                        android:text="@string/movie_description" />
                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/watch_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:text="@string/watch_movie" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableEnd="@drawable/baseline_share_24"
            android:text="@string/share_movie" />

    </LinearLayout>
</RelativeLayout>